--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -154,7 +154,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 #zoomed .prev {background:url("../images/nav_prev.png") no-repeat scroll left top transparent;height:35px;width:56px;}
 #zoomed .slides_container img, #zoomed  .panFullSize {border:1px solid #F0EEEA; cursor: crosshair}
 
-#photo_tooltip {background-color:rgba(255,255,255,0.6); display: none; z-index: 100; padding: 5px; border: 1px solid #ddd; font-size: 10px;  bottom: 0; left: 100px; position: absolute; }
+#photo_tooltip {background-color:rgba(255,255,255,0.6); display: none; z-index: 100; padding: 2px;  font-size: 10px;  bottom: 0; right: 0px; position: absolute; }
 #photo_tooltip b{font-weight: 700;}
 
 .timer{background: url(../images/bg_timer.jpg) top left repeat-x;border-top-left-radius:4px; -webkit-border-top-left-radius: 4px; -moz-borde-top-left-radius: 4px;border-top-right-radius:4px; -webkit-border-top-right-radius: 4px; -moz-borde-top-right-radius: 4px; height: 52px; color: #d9cac9; font-weight:normal; font-size: 13px;  width: 332px;}
