--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -147,7 +147,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 #zoomed {width: 750px;}
 #zoomed .slides_container {float: left; margin: 0 9px 0 0; width: 588px;}
 #zoomed .pagination{float:left;width:153px;}
-#zoomed .next, #zoomed .prev {position: absolute; z-index: 100;  }
+#zoomed .next, #zoomed .prev, #zoomed {position: absolute; z-index: 100;  }
 #zoomed .prev {left: 14px;}
 #zoomed .next {left: 570px;}
 #zoomed .next {background:url("../images/nav_next.png") no-repeat scroll left top transparent;height:35px;width:56px;}
