--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -150,7 +150,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 #zoomed .next, #zoomed .prev, #zoomed .logo {position: absolute; z-index: 100;  }
 #zoomed .prev {left: 14px;}
 #zoomed .next {left: 570px;}
-#zoomed .logo {bottom: 0; right: 0;}
+#zoomed .logo {bottom: -5px; right: 25px;}
 #zoomed .next {background:url("../images/nav_next.png") no-repeat scroll left top transparent;height:35px;width:56px;}
 #zoomed .prev {background:url("../images/nav_prev.png") no-repeat scroll left top transparent;height:35px;width:56px;}
 #zoomed .slides_container img, #zoomed  .panFullSize {border:1px solid #F0EEEA; cursor: crosshair}
