--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -158,7 +158,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 #photo_tooltip, #zoom_photo_tooltip {background-color:rgba(255,255,255,0.6); display: none; z-index: 100; padding: 4px;  font-size: 10px;  position: absolute; }
 #photo_tooltip b, #zoom_photo_tooltip b{font-weight: 700;}
 #photo_tooltip{ bottom: 0; right: 0px;}
-#zoom_photo_tooltip{ bottom: -6px; left: 13px;}
+#zoom_photo_tooltip{ bottom: -6px; left: 13px; display: block}
 
 .timer{background: url(../images/bg_timer.jpg) top left repeat-x;border-top-left-radius:4px; -webkit-border-top-left-radius: 4px; -moz-borde-top-left-radius: 4px;border-top-right-radius:4px; -webkit-border-top-right-radius: 4px; -moz-borde-top-right-radius: 4px; height: 52px; color: #d9cac9; font-weight:normal; font-size: 13px;  width: 332px;}
 .timer span{ font-style:normal; font-size:20px; color: #fff; position: relative; top: 2px; padding-left: 5px; font-weight: 500; font-family:"museo-sans-1","museo-sans-2", Helvetica;}
