--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -191,7 +191,7 @@ h2.details-store .store-name:hover {background-position: left bottom; text-decor
 
 a.more{background: url(../images/arrow_blue_down.jpg) center right no-repeat; padding: 0 13px 0 0px;}
 
-.pricing{margin-bottom: 3px; width: 332px;  font-size: 12px; padding: 0 0 14px 0;float: left; display: block; clear: both;}
+.pricing{margin-bottom: 3px; width: 332px;  font-size: 12px; padding: 14px 0;float: left; display: block; clear: both;}
 .pricing div{float: left; width: 110px; text-align:center; display: inline}
 .pricing .original{color: #998e82;background: url(../images/dotted_vertical.png) top right repeat-y;}
 .pricing .original h3 .field-item { background: url(../images/strikethrough.jpg) left center repeat-x; }
