--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -4,7 +4,7 @@
 img{border: none;}
 #wrapper{text-align: center; background: url(../images/bg_header.jpg) top left repeat-x; width: 100%;}
 .container{width:1000px; text-align: left; margin: 0 auto; color: #322f2c; font-family:"museo-sans-1","museo-sans-2", Helvetica; }
-a{font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; text-decoration:none; color: #0f6da3; font-size: 12px;}
+a, .dotted-hover{font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; text-decoration:none; color: #0f6da3; font-size: 12px;}
 a:hover{color: #2e92cc;}
 a:focus {outline: 0px solid black;}
 p{font-size: 13px; margin: 0 0 7px 0; }
@@ -18,6 +18,8 @@ ul{list-style-type: none;}
 .red{background-image: url(../images/b_bg_red.jpg) !important}
 a.button.white{font-size: 15px; font-style: normal; background:#e9e5e0  url(../images/b_bg_white.jpg) top left repeat-x; border: 1px solid #e0dbd6; color: #0f6da3;}
 a.button.white:hover{color: #0f6da3}
+
+.dotted-hover{border-bottom: 1px dotted #0f6da3; cursor: pointer;}
 
 .store-name{width: auto; font-weight: normal; font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; text-decoration:none; color: #0f6da3; font-size: 14px;}
 .store-hover .logo, .store-hover .press {float: left}
@@ -334,7 +336,10 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .page-express-checkout  .sidebarRight .column1{width: 682px;background: ; padding-right: 25px; padding-bottom: 30px;}
 .page-express-checkout  .sidebarRight .column2{position: absolute; width:267px; background: }
 .page-express-checkout  .sidebarRight .sidebar{width: 100%}
-
+#fm-commerce-express-checkout-form .form-item-credit-card-number {padding-bottom: 4px;}
+#fm-commerce-express-checkout-form .text-form-icon-wrapper{position: relative; width:240px; overflow: hidden; }
+#fm-commerce-express-checkout-form .text-form-icon-wrapper #lock_markup{position: absolute; top: 22px; right: 8px; }
+#fm-commerce-express-checkout-form .text-form-icon-wrapper #lock_markup img{ height: 17px; }
 	
 .customer_profile_shipping {margin-bottom: 25px;}
 
@@ -365,6 +370,9 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .form-item-commerce-customer-address-und-0-country, .form-item-commerce-customer-address-und-0-name-line{display: none}
 
 .checkoutFooter {border-top:2px solid #E5E1DD; float:left; margin-top:25px; padding:12px 0; width:680px;}
+.checkoutFooter span {color:#9D9085;font-family:Georgia,"Times New Roman",Times,serif;font-size:12px;font-style:italic;}
+.checkoutFooter .logo {display:block;float:none;margin-top:10px;}
+
 .completeOrder {float:right; font-size:12px; text-align:right;}
 .completeOrder .form-submit {background-image:url("../images/b_bg_red.jpg");display:block;float:right;font-size:16px;padding:10px 14px;text-align:center;}
 
@@ -373,6 +381,9 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 #billing .billingAddress {float:left;margin:25px 0;text-align:left;width:280px;}
 .saveTo {-moz-border-radius:5px 5px 5px 5px;background:none repeat scroll 0 0 #E2D9D0;clear:both;display:block;font-size:12px;padding:7px;width:160px;}
 .saveTo .form-item{float: none; font-size: 12px; padding:0;}
+
+.securityText {background:none repeat scroll 0 0 #FFFFFF;clear:both;color:#A0978F;float:left;font-size:12px;margin:6px 16px 16px;padding:10px;}
+.securityText img {float:left;margin:0 12px 0 0;}
 
 /* Checkout Block */
 #block-fm-commerce-cart-fm-commerce-cart .summary { background:none repeat scroll 0 0 #F0EBE7; width: 267px; margin-bottom: 20px;}
@@ -491,8 +502,8 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 
 
 /* My Designer Shop Admin */
-.owners-admin-section {margin-bottom: 10px; padding-bottom: 10px; border-bottom: 1px solid #ddd;}
-.paypal-wrapper{ margin: auto; width: 50%; padding-bottom: 20px; }
+.owners-admin-section {margin-bottom: 10px; padding-bottom: 10px; }
+.paypal-wrapper{ margin: auto; padding-bottom: 20px; }
 .owners-admin-wrapper #paypal_header{ width: 50%; margin: -20px auto 2px;text-align: center; }
 .owners-admin-wrapper #paypal_header  div{display: inline; }
 .owners-admin-wrapper #paypal_subheader{ text-align: center; margin: 3px auto 8px; width: 60%; font-size: 11px; font-style: italic; color:#888888;}
