--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -148,8 +148,8 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .gzoombutton, .gzoomSlider {display: none;}
 	
 #zoomed {width: 750px;}
-#zoomed .slides_container {float: left; margin: 0 9px 0 0; width: 588px;}
-#zoomed .pagination{float:left;width:153px;}
+#zoomed .slides_container {float: left; margin: 0 9px 0 0; width: 650px;}
+#zoomed .pagination{float:left;}
 #zoomed .next, #zoomed .prev, #zoomed .logo {position: absolute; z-index: 100;  }
 #zoomed .next, #zoomed .prev {height: 31px; width: 31px; }
 #zoomed .prev {left: 19px; background:url("../images/b_zoom_prev.png") no-repeat scroll left top transparent;}
