--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -526,14 +526,14 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 	
 	
 /* How it Works Overlay */
-#block-views-nodequeue-2-block{width: 928px; padding: 0 36px; height: 528px; background: url("../images/howitworks_background.png") top left no-repeat; }
-#block-views-nodequeue-2-block h1{color: #a6352f; font-size: 29px; font-weight: 100; margin-bottom: 30px; line-height: 34px; }
-#block-views-nodequeue-2-block h2{color:#CABFB8;text-transform: uppercase;font-size:15px;font-weight:500;left:570px;letter-spacing:3px;margin-bottom:30px;position:absolute;top:125px;}
-#block-views-nodequeue-2-block .howitworks-body p{font-size: 18px; color: #000; line-height: 25px; font-weight: 300;}
-#block-views-nodequeue-2-block .views-field-field-graphic, #block-views-nodequeue-2-block .views-field-title {float: left;}
-#block-views-nodequeue-2-block .views-field-field-graphic {width: 410px;margin-top: -29px; }
-#block-views-nodequeue-2-block .views-field-title{width: 360px; text-align:center; padding-top: 123px;} 
-#block-views-nodequeue-2-block .views-field-body {text-align:center; }
+.basicPagePopUp{width: 928px; padding: 0 36px; height: 528px; background: url("../images/howitworks_background.png") top left no-repeat; }
+.basicPagePopUp h1{color: #a6352f; font-size: 29px; font-weight: 100; margin-bottom: 30px; line-height: 34px; }
+.basicPagePopUp h2{color:#CABFB8;text-transform: uppercase;font-size:15px;font-weight:500;left:570px;letter-spacing:3px;margin-bottom:30px;position:absolute;top:125px;}
+.basicPagePopUp .howitworks-body p{font-size: 18px; color: #000; line-height: 25px; font-weight: 300;}
+.basicPagePopUp .views-field-field-graphic, .basicPagePopUp .views-field-title {float: left;}
+.basicPagePopUp .views-field-field-graphic {width: 410px;margin-top: -29px; }
+.basicPagePopUp .views-field-title{width: 360px; text-align:center; padding-top: 123px;} 
+.basicPagePopUp .views-field-body {text-align:center; }
 
 .views-slideshow-controls-text-previous, .views-slideshow-controls-text-next {text-indent: -9999px; top: 280px; z-index: 9999; cursor: pointer; display: block; width: 32px;height: 32px;background-image: url(../images/arrows.png);}
 
