--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -6,7 +6,7 @@ img{border: none;}
 .container{width:1000px; text-align: left; margin: 0 auto; color: #322f2c; font-family:"museo-sans-1","museo-sans-2", Helvetica; }
 a, .dotted-hover{font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; text-decoration:none; color: #0f6da3; font-size: 12px;}
 a:hover{color: #2e92cc;}
-a:focus {outline: 0px solid black;}
+a:focus, input:focus {outline: 0px solid black;}
 p{font-size: 13px; margin: 0 0 7px 0; }
 h1{font-weight:100; }
 h1 span{font-weight: bold}
