--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -525,7 +525,9 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 #fm-commerce-store-owners-admin-form #message_box {margin-top: 0px;}
 #fm-commerce-store-owners-admin-form .form-item {margin: 0px;}
 
-.orders_shippment_form {width: 400px;}
+#fm-commerce-store-owners-shippment-form .form-type-textfield input {background: url("../images/bg_field.jpg") repeat-x scroll left top transparent; border: 1px solid #CBC1BE;}
+
+.orders_shippment_form {width: 650px;}
 .orders_shippment_form .step1, .orders_shippment_form .step2{float: left; padding: 5px}
 .orders_shippment_form .step1 {border-right: 1px solid #ddd; float: }
 .orders_shippment_form .step2 {width: 220px;padding-left: 10px;}
