--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -531,7 +531,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .orders_shippment_form .step1, .orders_shippment_form .step2{float: left; padding: 5px}
 .orders_shippment_form .step1 {border-right: 1px solid #ddd; width: 130px;}
 .orders_shippment_form .step2 {width: 220px;padding-left: 10px;}
-.order_shipment_footer {text-align: center; font-style: italic; margin-top: 20px; font-size: 10px;}
+.order_shipment_footer {text-align: center; clear: both; font-style: italic; margin-top: 20px; font-size: 10px;}
 
 #lock_markup {margin: 4px 0 -4px; }
 #lock_markup img {height: 21px; opacity: .8; }
