new orders page

--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -543,6 +543,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .paypal_logo {height: 16px; margin: -5px 3px}
 
 #quicktabs-store_owners_admin #orders-list table{margin: 0px;}
+.orders-filter-list {list-style-type: none; display: inline;}
 	
 	
 /* How it Works Overlay */
