--- a/themes/fadmashion_commerce/css/colorbox_blank.css
+++ b/themes/fadmashion_commerce/css/colorbox_blank.css
@@ -2,11 +2,11 @@
     ColorBox Core Style:
     The following CSS is consistent between example themes and should not be altered.
 */
-/*.blankBox#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
-*/
-#colorbox, #cboxOverlay{position:fixed; top:0; left:0; z-index:9999; overflow:hidden;}
-#cboxWrapper{}
+.blankBox#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
 
+/*#colorbox, #cboxOverlay{position:fixed; top:0; left:0; z-index:9999; overflow:hidden;}
+#cboxWrapper{}
+*/
 
 .blankBox#colorbox #cboxOverlay{position:fixed; width:100%; height:100%;}
 .blankBox#colorbox#cboxMiddleLeft, .blankBox#colorbox #cboxBottomLeft{clear:left;}
