--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -110,9 +110,15 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 #signup div.password-confirm {display: none !important;}
 #signup .password-min {display: none;}
 #signup label.option { color: #E4DAD2; display:inline;font-weight:normal; font-size: 12px;}
-#signup label.option a{color: #fff; font-style: none; text-decoration: underline; font-style: normal; font-family: "museo-sans-1","museo-sans-2",Helvetica}
+#signup label.option a{color: #fff;text-decoration: underline;}
 
-#signup{width: 930px; height: 529px; background: url(../images/bg_signup_1.png) top left no-repeat; }
+#signup{width: 930px; height: 529px; background: url(../images/bg_panel.png) top left no-repeat; }
+#signup a{ font-style: none; text-decoration: none; font-style: normal; font-family: "museo-sans-1","museo-sans-2",Helvetica}
+.state1{background: url(../images/bg_model_1.png)  329px 5px no-repeat; width: 930px; height: 529px;}
+.state2, .state3{background: url(../images/bg_model_2.png)  50px 5px no-repeat; width: 930px; height: 529px;}
+#signup .state2 .box, #signup .state3 .box{width: 550px; margin-left: 352px; text-align:center; padding: 50px 0 0 0; }
+
+
 #signup .box{width: 880px;}
 #signup h1{color: #a6352f; font-size: 29px; font-weight: 100; margin-bottom: 30px; line-height: 34px; }
 #signup h2{color: #cabfb8; font-size: 13px; font-weight: 500; letter-spacing: 3px; margin-bottom: 30px;}
@@ -121,21 +127,65 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 #signup p.loginHere{margin-top: 30px; font-size: 13px;}
 #signup .pad{padding: 0px 0 0 36px;}
 #signup .text{width: 360px; text-align:center; padding-top: 90px; }
+#signup .login{width: 360px; text-align:center; padding-top: 80px; }
+
 
 #signup .form{float: right; width: 206px;}
 #signup  #message_box{margin: -10px 0 5px !important; }
+#signup label.invalid {display: none !important}
+#signup .form-item-mail label.invalid{display: block !important;}
 
-#signup .form-text{background: url(../images/bg_form_field.png) top left no-repeat; border: none; width: 206px; height: 32px; padding-left: 5px; color: #fff; font-size: 12px; margin-bottom: 6px;}
-#signup .form h1{color: #fff; font-size: 22px; font-weight: 100; margin: 90px 0 10px 0; padding: 0;}
+
+#signup .form-text{background: #b3a396 url(../images/bg_field_dark.jpg) top left repeat-x; border: 1px solid #83746a; width: 206px; height: 32px; padding-left: 5px; color: #fff; font-size: 12px; margin-bottom: 6px; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
+#signup .form-text.invalid {border:1px solid #DE2C2C;}
+#signup .form-text.urlCode{width: 270px; border: none; margin: none;}
+
+#signup .form h1{color: #fff; font-size: 22px; font-weight: 100; margin: 72px 0 10px 0; padding: 0;}
 #signup .fieldsRequired{text-align: right; font-style:italic; color: #c3bcb7; font-size: 11px; padding-bottom: 4px;}
 
 #signup .options{color: #e4dad2; font-size: 12px; padding-top: 6px;}
 #signup .options a{color: #fff;}
 #signup .options div{padding-bottom: 4px;}
 
-#user-register-form .form-submit {background: url(../images/b_signup.png) top left no-repeat; display: block; width: 206px; height: 43px; text-indent:-9999px; margin: 20px 0 50px 0;}
+#user-register-form .form-submit {background: url(../images/b_signup.png) top left no-repeat; display: block; width: 206px; height: 43px; text-indent:-9999px; margin: 10px 0 50px 0;}
 a.facebookConnect{background: url(../images/b_facebook.png) top left no-repeat; display: block; width: 206px; height: 30px; text-indent:-9999px;}
-#signup .form-submit:hover, a.facebookConnect:hover{background-position: bottom left;}
+#signup .form-submit:hover, a.facebookConnect:hover, .inviteFriends:hover{background-position: bottom left;}
+
+#signup #user-login-form .forgotPassword {float: left; font-size: 11px; text-decoration:none; font-style: normal; }
+#signup #user-login-form{width: 237px; text-align: left; margin: 0 auto;}
+#signup #user-login-form .form-text, #signup .sendFields .form-text{background: #fff url(../images/bg_field_light.jpg) top left repeat-x; border: 1px solid #e8e5e4; color: #9c8a7f; font-size: 14px; width: 231px; margin-bottom: 12px;}
+#signup #user-login-form .form-submit{ margin: 0 !important; float: right; color: #fff; background: url(../images/b_login.png) top left no-repeat; width: 80px; height: 34px; text-decoration: none; text-align:center; line-height: 34px; font-size: 14px;}
+#signup #user-login-form .form-submit:hover {background-position: bottom left;}
+
+.generatingCode{margin: 160px 0 0 0; text-align:center;}
+
+a.btnFacebook{width: 32px; height: 31px; background: url(../images/b_facebook_social.png) top left no-repeat; text-indent:-9999px; display: block;}
+a.btnTwitter{width: 32px; height: 31px; background: url(../images/b_twitter_social.png) top left no-repeat; text-indent:-9999px;display: block;}
+a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
+
+#inviteCode{border-collapse: separate !important; background: #74645a; padding: 5px; color: #fff; font-size: 13px; border-top-left-radius:5px; -webkit-border-top-left-radius: 5px; -moz-border-top-left-top-radius: 5px;  border-top-right-radius:5px; -webkit-border-top-right-radius: 5px; -moz-border-top-right-top-radius: 5px; margin: 20px auto 0 auto; width: 490px;}
+#inviteCode td{padding: 0 3px; background-color: transparent !important;}
+#inviteCode th{padding: 0 8px; border-bottom: 0px solid #000 !important; text-align: left; padding-right: 0px;}
+#inviteCode .form-text{margin: 0;}
+
+.sendFields{ margin:0 0 15px 0; padding: 15px 0;text-align: center; background: #f0ebe5; width: 490px; margin: 0 auto; border-bottom-left-radius:5px; -webkit-border-bottom-left-radius: 5px; -moz-border-bottom-left-top-radius: 5px;  border-bottom-right-radius:5px; -webkit-border-bottom-right-radius: 5px; -moz-border-bottom-right-top-radius: 5px;}
+.inviteFriends{display: block;  background: url(../images/b_invite.png) top left no-repeat; height: 34px; width: 121px; line-height: 34px; text-align:center; text-decoration: none; color: #fff; font-size: 14px; margin: 15px auto 0 auto;}
+#signup .sendFields .form-text{width: 210px; margin: 4px;}
+
+.skipInvites{ text-decoration: none; font-size: 12px; margin: 26px 0 0 0; display: block;}
+#signup .state2 p{font-size: 15px; line-height: 20px;}
+
+#signup .errorText{margin-top: 10px; background: #6e5e54; padding: 5px; font-size: 12px; color: #fff; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
+#signup .loginErrorText { display: none; margin: 0 0 10px; font-size: 12px; }
+
+#fm-invite-send-email-form {overflow: hidden; padding: 0 20px; }
+#fm-invite-send-email-form .form-type-textfield {float: left;}
+#fm-invite-send-email-form .form-submit {float:left;margin: 10px 0 0 165px}
+#fm-invite-send-email-form #message_box{display: none !important;}
+
+#signup .form-text.invalid {border:1px solid #DE2C2C !important;}
+#signup .backSignup {display:block;font-size:12px;margin:80px 0 0 100px;padding-left:12px;text-align:left;text-decoration:none;}
+
 
 
 /* Right-hand Sidebar Layout */
