--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -136,7 +136,7 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 #signup .form-item-mail label.invalid{display: block !important;}
 
 
-#signup .form-text{background: #b3a396 url(../images/bg_field_dark.jpg) top left repeat-x; border: 1px solid #83746a; width: 206px; height: 32px; padding-left: 5px; color: #fff; font-size: 12px; margin-bottom: 6px; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
+#signup .form-text{line-height: 32px; background: #b3a396 url(../images/bg_field_dark.jpg) top left repeat-x; border: 1px solid #83746a; width: 206px; height: 32px; padding-left: 5px; color: #fff; font-size: 12px; margin-bottom: 6px; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
 #signup .form-text.invalid {border:1px solid #DE2C2C;}
 #signup .form-text.urlCode{width: 270px; border: none; margin: none;}
 
