--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -53,7 +53,7 @@ label{font-weight: normal;}
 .messages {width: auto !important; font-size: 14px; -moz-border-radius:4px;  -webkit-border-radius: 4px;}
 .messages a{text-decoration:underline;}
 
-.messages.status {background:none repeat scroll 0 0 #62973D; padding:5px; color: #fff; border: 0px solid #000;width: auto !important; }
+.messages.status {background:none repeat scroll 0 0 #FFFFFF;border:1px solid #62973D;color:#62973D;padding:5px;width:95% !important;} 
 
 label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
 
