--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -307,11 +307,13 @@ a.more{background: url(../images/arrow_blue_down.jpg) center right no-repeat; pa
 
 .itemOptions{ width: 332px; clear: both; margin-bottom: 14px; text-align:center;}
 .itemOptions .frame{display: block; }
-.itemOptions .box{background: url(../images/bg_itemOptions.jpg) top left repeat-y;  padding: 10px 10px 5px 10px; font-size: 12px; }
+.itemOptions .box{overflow: hidden; background: url(../images/bg_itemOptions.jpg) top left repeat-y;  padding: 10px 10px 5px 10px; font-size: 12px; }
 .itemOptions .product_button_text {font-family:Georgia,"Times New Roman",Times,serif;font-style:italic;margin-top:16px;padding-left:38px;text-align:center;width:250px;}
 
 .itemOptions .options{text-align: left;}
-.itemOptions .form-submit, .itemOptions  .button a {font-size:15px;font-weight:600;margin:0;padding:6px 30px;}
+.itemOptions .form-submit, .itemOptions  .button a { margin: 0 !important; padding:6px 30px; font-weight: 600;  color: #fff; background: url(../images/b_login.png) top left no-repeat; width: 80px; height: 34px; text-decoration: none; text-align:center; line-height: 34px; font-size: 14px;}
+.form-submit:hover {background-position: bottom left;}
+
 .notify {border-bottom:1px solid #F0EFED;border-top:1px solid #F0EFED;margin:0 0 20px;padding:30px 0 20px;text-align:center;}
 
 .itemOptions label {float:left;text-align:left;width:60px;}
