--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -170,22 +170,27 @@ a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
 #inviteCode th{padding: 0 8px; border-bottom: 0px solid #000 !important; text-align: left; padding-right: 0px;}
 #inviteCode .form-text{margin: 0;}
 
-.sendFields{ margin:0 0 15px 0; padding: 15px 0;text-align: center; background: #f0ebe5; width: 490px; margin: 0 auto; border-bottom-left-radius:5px; -webkit-border-bottom-left-radius: 5px; -moz-border-bottom-left-top-radius: 5px;  border-bottom-right-radius:5px; -webkit-border-bottom-right-radius: 5px; -moz-border-bottom-right-top-radius: 5px;}
+
+#signup .errorText{margin-top: 10px; background: #6e5e54; padding: 5px; font-size: 12px; color: #fff; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
+#signup .loginErrorText { display: none; margin: 0 0 10px; font-size: 12px; }
+
+#signup .form-text.invalid {border:1px solid #DE2C2C !important;}
+#signup .backSignup {display:block;font-size:12px;margin:80px 0 0 135px;padding-left:12px;text-align:left;text-decoration:none;}
+
+/* invite Pop-up */
+.invite_state2, .invite_state3 {display: none; }
+.invite_state3 {margin-top: 50px; }
+.invite_state3 p{color: #A6352F; font-size: 16px;}
+#fm-invite-send-email-form {overflow: hidden; padding: 0 20px; }]
+#fm-invite-send-email-form .form-submit {float:left;margin: 10px 0 0 165px;  padding: 0;}
+#fm-invite-send-email-form #message_box{display: none !important;}
+
+.sendFields{ margin:0 0 15px 0; height: 165px; padding: 15px 0;text-align: center; background: #f0ebe5; width: 490px; margin: 0 auto; border-bottom-left-radius:5px; -webkit-border-bottom-left-radius: 5px; -moz-border-bottom-left-top-radius: 5px;  border-bottom-right-radius:5px; -webkit-border-bottom-right-radius: 5px; -moz-border-bottom-right-top-radius: 5px;}
 .inviteFriends{margin:15px 0 0 170px !important;  padding: 0 12px !important; display: block; float: left;  background: url(../images/b_invite.png) top left no-repeat; height: 34px; width: 121px; line-height: 34px; text-align:center; text-decoration: none; color: #fff; font-size: 14px; }
 #signup .sendFields .form-text{width: 210px; margin: 4px;float: left;}
 
 .skipInvites{ text-decoration: none; font-size: 12px; margin: 26px 0 0 0; display: block;}
 #signup .state2 p{font-size: 15px; line-height: 20px;}
-
-#signup .errorText{margin-top: 10px; background: #6e5e54; padding: 5px; font-size: 12px; color: #fff; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
-#signup .loginErrorText { display: none; margin: 0 0 10px; font-size: 12px; }
-
-#fm-invite-send-email-form {overflow: hidden; padding: 0 20px; }]
-#fm-invite-send-email-form .form-submit {float:left;margin: 10px 0 0 165px;  padding: 0;}
-#fm-invite-send-email-form #message_box{display: none !important;}
-
-#signup .form-text.invalid {border:1px solid #DE2C2C !important;}
-#signup .backSignup {display:block;font-size:12px;margin:80px 0 0 135px;padding-left:12px;text-align:left;text-decoration:none;}
 
 
 
