--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -177,6 +177,10 @@ a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
 #signup .form-text.invalid {border:1px solid #DE2C2C !important;}
 #signup .backSignup {display:block;font-size:12px;margin:80px 0 0 135px;padding-left:12px;text-align:left;text-decoration:none;}
 
+#user-login-form .text-form-icon-wrapper #login_loader{position: absolute; top: 10px; right: 12px; display: none;}
+#user-login-form .text-form-icon-wrapper #login_loader img{ height: 17px; }
+#user-login-form .text-form-icon-wrapper {overflow:hidden;position:relative;width:240px;}
+
 /* invite Pop-up */
 .invite_state2, .invite_state3 {display: none; }
 .invite_state3 {margin-top: 50px; }
