--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -124,12 +124,12 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 #signup .box{width: 880px;}
 #signup h1{color: #a6352f; font-size: 29px; font-weight: 100; margin-bottom: 30px; line-height: 34px; }
 #signup h2{color: #cabfb8; font-size: 13px; font-weight: 500; letter-spacing: 3px; margin-bottom: 30px;}
-#signup p{font-size: 18px; color: #908075; line-height: 26px; font-weight: 300; margin-bottom: 12px; padding: 0 30px;}
+#signup p{background: transparent; font-size: 18px; color: #908075; line-height: 26px; font-weight: 300; margin-bottom: 12px; padding: 0 30px;}
 #signup p b{color: #68594f;}
 #signup p.loginHere{margin-top: 30px; font-size: 13px;}
 #signup .pad{padding: 0px 0 0 36px;}
 #signup .text{width: 360px; text-align:center; padding-top: 90px; }
-#signup .login{width: 420px; text-align:center; padding-top: 80px; }
+#signup .login{width: 430px; text-align:center; padding-top: 70px; }
 
 
 #signup .form{float: right; width: 206px;}
